[tool.poetry]
name = "gary"
version = "0.1.0"
description = ""
authors = ["Cypheriel <61402923+Cypheriel@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.5.1"
rich = "^13.6.0"
python-dotenv = "^1.0.0"
py-cord = "^2.4.1"
aiohttp = {extras = ["speedups"], version = "^3.8.5"}


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
bandit = "^1.7.5"
pre-commit = "^3.4.0"
codespell = "^2.2.6"
tomli = "^2.0.1"
isort = "^5.12.0"
flake8-builtins = "^2.1.0"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.14.0"
flake8-warnings = "^0.4.1"
flake8-useless-assert = "^0.4.4"
flake8-async = "^22.11.14"
flake8-simplify = "^0.21.0"
flake8-docstrings = "^1.7.0"
flake8-broken-line = "^1.0.0"
flake8-printf-formatting = "^1.1.2"
flake8-todo = "^0.7"
flake8-markdown = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
